use multiple sources

--- a/internal/embed/templates/apps.yml
+++ b/internal/embed/templates/apps.yml
@@ -1,12 +1,14 @@
 apps:
   - name: "haloy-test"
+    source:
+      dockerfile:
+        path: "{{ .ConfigDirPath }}/test-website/Dockerfile"
+        buildContext: "{{ .ConfigDirPath }}/test-website"
     domains:
       - domain: "example.com"
         aliases:
           - "www.example.com"
       - domain: "test.example.com"
     acmeEmail: "tls@example.com"
-    dockerfile: "{{ .ConfigDirPath }}/test-website/Dockerfile"
-    buildContext: "{{ .ConfigDirPath }}/test-website"
     keepOldContainers: 3
     healthCheckPath: "/health.html"
