--- a/internal/embed/templates/haproxy.cfg
+++ b/internal/embed/templates/haproxy.cfg
@@ -23,12 +23,12 @@ frontend http-in
 
     # Add ACME HTTP-01 challenge path exception
     acl is_acme_challenge path_beg /.well-known/acme-challenge/
-    use_backend acme_challenge if is_acme_challenge
 
     # Dynamically generated code by haloy
 {{ .HTTPFrontend }}
     # End of dynamically generated code by haloy
 
+    use_backend acme_challenge if is_acme_challenge
 
 frontend https-in
     bind *:443 ssl crt /usr/local/etc/haproxy/certs/ alpn h2,http/1.1
@@ -36,12 +36,13 @@ frontend https-in
 
     # Add ACME HTTP-01 challenge path exception for HTTPS
     acl is_acme_challenge path_beg /.well-known/acme-challenge/
-    use_backend acme_challenge if is_acme_challenge
 
     # Dynamically generated code by haloy (Host-based routing)
 {{ .HTTPSFrontend }}
+{{ .HTTPSFrontendUseBackend}}
     # End of dynamically generated code by haloy
 
+    use_backend acme_challenge if is_acme_challenge
 
     # Fallback for unmatched requests
     default_backend default_backend
