--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -80,8 +80,7 @@ jobs:
           VERSION: ${{ github.ref_name }}
         run: |
           mkdir -p dist
-          # PLATFORMS=("linux/amd64" "linux/arm64" "darwin/amd64" "darwin/arm64" "windows/amd64")
-          PLATFORMS=("linux/amd64")
+          PLATFORMS=("linux/amd64" "linux/arm64" "darwin/amd64" "darwin/arm64" "windows/amd64")
 
           for platform in "${PLATFORMS[@]}"; do
             IFS="/" read -r -a parts <<< "$platform"
