--- a/internal/embed/templates/haproxy.cfg
+++ b/internal/embed/templates/haproxy.cfg
@@ -61,7 +61,7 @@ backend acme_challenge
     http-request set-header Host %[req.hdr(host)]
 
     # ACME Challenge backend with no-check because it's only available for a short time.
-    server haloy-manager haloy-manager:8080 no-check
+    server haloyd haloyd:8080 no-check
 
     # Return custom HTML page if backend is unreachable
     errorfile 503 /usr/local/etc/haproxy-errors/404.html
