--- a/dev/haloyd/Dockerfile.dev
+++ b/dev/haloyd/Dockerfile.dev
@@ -1,5 +1,5 @@
 # Build the development image
-# docker build -t haloy-manager-dev -f ./dev/manager/Dockerfile.dev .
+# docker build -t haloyd-dev -f ./dev/haloyd/Dockerfile.dev .
 
 FROM golang:1.24-alpine
 
@@ -12,7 +12,7 @@ RUN apk add --no-cache \
 EXPOSE 9999
 
 RUN echo '[build]' > /root/.air.toml && \
-    echo 'cmd = "go build -o ./tmp/app ./cmd/manager"' >> /root/.air.toml && \
+    echo 'cmd = "go build -o ./tmp/app ./cmd/haloyd"' >> /root/.air.toml && \
     echo 'bin = "./tmp/app"' >> /root/.air.toml && \
     echo 'include_ext = ["go", "yaml"]' >> /root/.air.toml && \
     echo 'exclude_dir = ["tmp", "vendor"]' >> /root/.air.toml
@@ -20,7 +20,7 @@ RUN echo '[build]' > /root/.air.toml && \
 # Working directory will be mounted from host
 WORKDIR /src
 
-LABEL haloy.role=manager
+LABEL haloy.role=haloyd
 
 # Use air for hot reload during development
 CMD ["air", "-c", "/root/.air.toml"]
