--- a/internal/embed/templates/haproxy.cfg
+++ b/internal/embed/templates/haproxy.cfg
@@ -54,7 +54,7 @@ frontend https-in
 
 backend acme_challenge
     mode http
-    # Forward to the manager container which will handle the ACME challenge
+    # Forward to the haloyd container which will handle the ACME challenge
     http-request set-header X-Forwarded-For %[src]
     http-request set-header X-Forwarded-Proto http
     http-request set-header X-Forwarded-Port %[dst_port]
