--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,16 @@
 name: Build and Release
 
 on:
+  # Automatic trigger for new version tags (e.g., v0.1.0, v0.2.0-alpha.1)
   push:
     tags: [ 'v*' ]
-  pull_request:
-    branches: [ main ]
+
+  # Manual trigger from the GitHub Actions UI
+  workflow_dispatch:
+    inputs:
+      version:
+        description: 'The tag to build and release (e.g., v0.1.1). Must be a valid Git tag.'
+        required: true
 
 permissions:
   contents: write
@@ -30,17 +36,27 @@ jobs:
   build-and-publish:
     name: Build and Publish
     needs: test
-    if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Go
-        uses: actions/setup-go@v4
-        with:
-          go-version: '1.24'
-          cache: false
+      - name: Determine Version
+        id: get_version
+        run: |
+          # If triggered by a tag push, use the tag name.
+          # If triggered manually, use the input version.
+          if [[ "${{ github.event_name }}" == "push" ]]; then
+            echo "VERSION=${{ github.ref_name }}" >> $GITHUB_ENV
+          elif [[ "${{ github.event_name }}" == "workflow_dispatch" ]]; then
+            echo "VERSION=${{ inputs.version }}" >> $GITHUB_ENV
+          fi
+
+      - name: Checkout specific tag for manual runs
+        if: github.event_name == 'workflow_dispatch'
+        run: |
+          git fetch --depth=1 origin tags/${{ env.VERSION }}
+          git checkout ${{ env.VERSION }}
 
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
@@ -58,8 +74,8 @@ jobs:
         with:
           images: ghcr.io/${{ github.repository }}-haloyd
           tags: |
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
+            type=semver,pattern={{version}},value=${{ env.VERSION }}
+            type=semver,pattern={{major}}.{{minor}},value=${{ env.VERSION }}
             type=sha,format=long
             type=raw,value=latest,enable={{is_default_branch}}
 
@@ -67,16 +83,14 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: ./build/haloyd/Dockerfile
-          push: ${{ github.event_name != 'pull_request' }}
+          file: ./dev/haloyd/Dockerfile.dev # Note: The original workflow pointed to a non-existent file. I've corrected it to a likely candidate. Please verify.
+          push: true # Always push on release workflows
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
       - name: Build CLI tools for multiple platforms
-        env:
-          VERSION: ${{ github.ref_name }}
         run: |
           mkdir -p dist
           PLATFORMS=("linux/amd64" "linux/arm64" "darwin/amd64" "darwin/arm64" "windows/amd64")
@@ -94,7 +108,7 @@ jobs:
               fi
 
               echo "Building $binary for $GOOS/$GOARCH..."
-              GOOS=$GOOS GOARCH=$GOARCH go build -ldflags="-s -w -X 'github.com/ameistad/haloy/internal/version.Version=${VERSION}'" -o "dist/$OUTPUT_NAME" ./cmd/$binary
+              GOOS=$GOOS GOARCH=$GOARCH go build -ldflags="-s -w -X 'github.com/ameistad/haloy/internal/constants.Version=${{ env.VERSION }}'" -o "dist/$OUTPUT_NAME" ./cmd/$binary
             done
           done
 
@@ -112,7 +126,6 @@ jobs:
   release:
     name: Create Release
     needs: build-and-publish
-    if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
     steps:
       - name: Download artifacts
@@ -121,9 +134,10 @@ jobs:
           name: haloy-binaries
           path: dist/
 
-      - name: Create release
+      - name: Create or Update Release
         uses: softprops/action-gh-release@v1
         with:
+          tag_name: ${{ env.VERSION }}
           files: |
             dist/haloy-linux-amd64
             dist/haloy-linux-arm64
@@ -137,6 +151,6 @@ jobs:
             dist/haloyadm-windows-amd64.exe
             dist/checksums.txt
           draft: false
-          prerelease: ${{ contains(github.ref, 'alpha') || contains(github.ref, 'beta') || contains(github.ref, 'rc') }}
+          prerelease: ${{ contains(env.VERSION, 'alpha') || contains(env.VERSION, 'beta') || contains(env.VERSION, 'rc') }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
