--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,15 +20,19 @@ jobs:
           go-version: '1.24'
           cache: false
 
+      - name: Install gofumpt
+        run: go install mvdan.cc/gofumpt@latest
+
       - name: Run tests
         run: go test -v ./...
 
       - name: Run linting
         run: |
           go vet ./...
-          # Check if code is properly formatted
-          if [ "$(gofmt -l .)" != "" ]; then
+          # Check if code is properly formatted with gofumpt
+          if [ "$(gofumpt -l .)" != "" ]; then
             echo "The following files are not properly formatted:"
-            gofmt -l .
+            gofumpt -l .
+            echo "Run 'gofumpt -w .' to fix formatting issues"
             exit 1
           fi
